remove references to MaxPermSize - no longer valid for Java >= 8